--- a/index.html
+++ b/index.html
@@ -221,8 +221,8 @@
     </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script type="text/javascript" src="js/base.js"></script>
-    <script src="../me/js/slick.min.js"></script>
+    <script type="text/javascript" src="https://ak-n-1.github.io/beyo/base.js"></script>
+    <script src="https://ak-n-1.github.io/beyo/slick.min.js"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 
   </body>
