--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <title>Beyo.</title>
     <link rel="stylesheet" href="https://use.typekit.net/zif1qba.css">
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://ak-n-1.github.io/beyo/slick.css">
-    <link rel="stylesheet" href="https://ak-n-1.github.io/beyo/slick-theme.css">
+    <link rel="stylesheet" href="https://ak-n-1.github.io/beyo/js/slick.css">
+    <link rel="stylesheet" href="https://ak-n-1.github.io/beyo/js/slick-theme.css">
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
-    <link rel="stylesheet" href="https://ak-n-1.github.io/beyo/reset.css">
-    <link rel="stylesheet" href="https://ak-n-1.github.io/beyo/style.css">
+    <link rel="stylesheet" href="https://ak-n-1.github.io/beyo/css/reset.css">
+    <link rel="stylesheet" href="https://ak-n-1.github.io/beyo/css/style.css">
     <meta name="viewport" content="width=device-width">
   </head>
   <body>
@@ -27,7 +27,7 @@
           </div>
           <div class="headbar">
             <div class="top-logo">
-              <img src="https://ak-n-1.github.io/beyo/Beyologo.svg" alt="ロゴ">
+              <img src="https://ak-n-1.github.io/beyo/img/Beyologo.svg" alt="ロゴ">
             </div>
             <button class="nav_toggle">
               <i></i>
@@ -221,8 +221,8 @@
     </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script type="text/javascript" src="https://ak-n-1.github.io/beyo/base.js"></script>
-    <script src="https://ak-n-1.github.io/beyo/slick.min.js"></script>
+    <script type="text/javascript" src="https://ak-n-1.github.io/beyo/js/base.js"></script>
+    <script src="https://ak-n-1.github.io/beyo/js/slick.min.js"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 
   </body>
