--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
               <p>スタイリスト</p>
             </div>
             <div class="staff-box">
-              <img src=https://ak-n-1.github.io/beyo/img/staff_3.jpg" alt="男性スタッフ">
+              <img src="https://ak-n-1.github.io/beyo/img/staff_3.jpg" alt="男性スタッフ">
               <h3>佐藤　健太</h3>
               <p>代表/スタイリスト</p>
             </div>
