--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <title>Beyo.</title>
     <link rel="stylesheet" href="https://use.typekit.net/zif1qba.css">
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
-    <link rel="stylesheet" href="../me/js/slick.css">
-    <link rel="stylesheet" href="../me/js/slick-theme.css">
+    <link rel="stylesheet" href="https://ak-n-1.github.io/beyo/js/slick.css">
+    <link rel="stylesheet" href="https://ak-n-1.github.io/beyo/js/slick-theme.css">
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
-    <link rel="stylesheet" href="../me/css/reset.css">
-    <link rel="stylesheet" href="../me/css/style.css">
+    <link rel="stylesheet" href="https://ak-n-1.github.io/beyo/css/reset.css">
+    <link rel="stylesheet" href="https://ak-n-1.github.io/beyo/css/style.css">
     <meta name="viewport" content="width=device-width">
   </head>
   <body>
