--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <header>
           <div id="top">
             <div class="top-img2">
-              <img src="../me/img/top1.jpg" alt="正面女性">
+              <img src="https://ak-n-1.github.io/beyo/img/top1.jpg" alt="正面女性">
             </div>
           <div class="titlecopy">
             <h1>beauty & life.</h1>
@@ -27,7 +27,7 @@
           </div>
           <div class="headbar">
             <div class="top-logo">
-              <img src="../me/img/Beyologo.svg" alt="ロゴ">
+              <img src="https://ak-n-1.github.io/beyo/img/Beyologo.svg" alt="ロゴ">
             </div>
             <button class="nav_toggle">
               <i></i>
@@ -49,10 +49,10 @@
         <section id="about">
           <div class="slider_block">
             <ul class="slider">
-              <li><img src="../me/img/kamikiri1.jpg" alt="カット中"></li>
-              <li><img src="../me/img/color.jpg" alt="カラー中"></li>
-              <li><img src="../me/img/shampoo.jpg" alt="シャンプー中"></li>
-              <li><img src="../me/img/siagari.jpg" alt="仕上がり確認"></li>
+              <li><img src="https://ak-n-1.github.io/beyo/img/kamikiri1.jpg" alt="カット中"></li>
+              <li><img src="https://ak-n-1.github.io/beyo/img/color.jpg" alt="カラー中"></li>
+              <li><img src="https://ak-n-1.github.io/beyo/img/shampoo.jpg" alt="シャンプー中"></li>
+              <li><img src="https://ak-n-1.github.io/beyo/img/siagari.jpg" alt="仕上がり確認"></li>
             </ul>
           </div>
           <div class="about_text">
@@ -65,7 +65,7 @@
 
         <section id="menu">
           <div class="menu-back">
-            <img src="../me/img/背景1.jpg" alt="波波背景">
+            <img src="https://ak-n-1.github.io/beyo/img/背景1.jpg" alt="波波背景">
           </div>
           <div class="menu_textbox">
               <h2>MENU</h2>
@@ -155,21 +155,21 @@
           <div class="staff-img">
             <div class="staff-box">
               <div class="staffimg">
-                <img src="../me/img/staff_1.jpg" alt="女性スタッフ1">
+                <img src="https://ak-n-1.github.io/beyo/img/staff_1.jpg" alt="女性スタッフ1">
               </div>
               <h3>後藤　あかり</h3>
               <p>スタイリスト</p>
             </div>
             <div class="staff-box">
               <div class="staffimg">
-                <img src="../me/img/staff_2.jpg" alt="女性スタッフ2">
+                <img src="https://ak-n-1.github.io/beyo/img/staff_2.jpg" alt="女性スタッフ2">
               </div>
               <h3>清水　聡美</h3>
               <p>スタイリスト</p>
             </div>
             <div class="staff-box">
               <div class="staffimg">
-                <img src="../me/img/staff_3.jpg" alt="男性スタッフ">
+                <img src="https://ak-n-1.github.io/beyo/img/staff_3.jpg" alt="男性スタッフ">
               </div>
               <h3>佐藤　健太</h3>
               <p>代表/スタイリスト</p>
@@ -202,7 +202,7 @@
           <div class="access-box1"></div>
           <div class="access-box2">
             <div class="access-img">
-              <img src="../me/img/美容院店内.jpg" alt="店内">
+              <img src="https://ak-n-1.github.io/beyo/img/美容院店内.jpg" alt="店内">
             </div>
             <div class="access-text">
               <h2 id="access_title">ACCESS</h2>
@@ -214,7 +214,7 @@
 
         <footer>
           <section id="footer_block">
-            <img src="../me/img/Beyologo.svg" alt="ロゴ">
+            <img src="https://ak-n-1.github.io/beyo/img/Beyologo.svg" alt="ロゴ">
             <div class="sns-list">
               <a href="#top" class="insta-name"><i class="fab fa-instagram fa-2x"></i></a>
               <a href="#top" class="twitter-btn"><i class="fab fa-twitter fa-2x"></i></a>
@@ -228,7 +228,7 @@
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script type="text/javascript" src="js/base.js"></script>
-    <script src="../me/js/slick.min.js"></script>
+    <script src="https://ak-n-1.github.io/beyo/js/slick.min.js"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 
   </body>
