--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <li class="menu__item"><a href="#about">ABOUT</a></li>
                 <li class="menu__item"><a href="#h2_title">MENU</a></li>
                 <li class="menu__item"><a href="#news">NEWS</a></li>
-                <li class="menu__item"><a href="#access">CONTACT</a></li>
+                <li class="menu__item"><a href="#access">ACCESS</a></li>
               </ul>
             </nav>
           </div>
@@ -65,7 +65,8 @@
 
         <section id="menu">
           <div class="menu-back">
-            <img src="https://ak-n-1.github.io/beyo/img/背景1.jpg" alt="波波背景">
+            <img class="pc" src="https://ak-n-1.github.io/beyo/img/背景1.jpg" alt="波波背景pc">
+            <img class="sp" src="https://ak-n-1.github.io/beyo/img/背景1-2.jpg" alt="波波背景sp">
           </div>
           <div class="menu_textbox">
               <h2>MENU</h2>
