--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         <header>
           <div id="top">
             <div class="top-img2">
-              <img src="https://ak-n-1.github.io/beyo/img/top1.jpg" alt="正面女性">
+              <img class="pc" src="https://ak-n-1.github.io/beyo/img/top1.jpg" alt="正面女性">
+              <img class="sp" src="https://ak-n-1.github.io/beyo/img/top1-2.jpg" alt="正面女性">
             </div>
           <div class="titlecopy">
             <h1>beauty & life.</h1>
