--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <link rel="stylesheet" href="https://ak-n-1.github.io/beyo/css/reset.css">
     <link rel="stylesheet" href="https://ak-n-1.github.io/beyo/css/style.css">
+    <script src="https://kit.fontawesome.com/d523dcaa5d.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width">
   </head>
   <body>
@@ -221,7 +222,18 @@
               <a href="#top" class="insta-name"><i class="fab fa-instagram fa-2x"></i></a>
               <a href="#top" class="twitter-btn"><i class="fab fa-twitter fa-2x"></i></a>
             </div>
-            <p>Copyright 2022 | Beyo. All Rights Reserved.</p>
+            <div class="contact-list">
+                <div class="phone">
+                  <i class="fa-solid fa-phone"></i>
+                  <p>0000-222-0000</p>
+                </div>
+                <div class="mail">
+                  <i class="fa-regular fa-envelope"></i>
+                  <p>beyo_kakuu@beyo.or.jp</p>
+                </div>
+              </div>
+              <p>Copyright 2022 | Beyo. All Rights Reserved.</p>
+            </div>
           </section>
         </footer>
 
