--- a/index.html
+++ b/index.html
@@ -217,12 +217,14 @@
 
         <footer>
           <section id="footer_block">
-            <img src="https://ak-n-1.github.io/beyo/img/Beyologo.svg" alt="ロゴ">
-            <div class="sns-list">
-              <a href="#top" class="insta-name"><i class="fab fa-instagram fa-2x"></i></a>
-              <a href="#top" class="twitter-btn"><i class="fab fa-twitter fa-2x"></i></a>
-            </div>
-            <div class="contact-list">
+            <img class="backimg" src="https://ak-n-1.github.io/beyo/img/背景1-3.jpg" alt="footer背景">
+            <div class="footerbox">
+              <img class="footerlogo" src="https://ak-n-1.github.io/beyo/img/Beyologo.svg" alt="ロゴ">
+              <div class="sns-list">
+                <a href="#top" class="insta-name"><i class="fab fa-instagram fa-2x"></i></a>
+                <a href="#top" class="twitter-btn"><i class="fab fa-twitter fa-2x"></i></a>
+              </div>
+              <div class="contact-list">
                 <div class="phone">
                   <i class="fa-solid fa-phone"></i>
                   <p>0000-222-0000</p>
