--- a/index.html
+++ b/index.html
@@ -59,8 +59,10 @@
           </div>
           <div class="about_text">
             <h2 id="about_title">ABOUT</h2>
-            <p>お客様一人ひとりに寄り添ったご提案をさせていただきます。<br>
-              ヘアスタイル、髪質についてなど気兼ねなくご相談ください。
+            <p>2019年丸区三角町にオープンしました。<br>
+              お客様一人ひとりに寄り添ったご提案をさせていただきます。<br>
+              ヘアスタイル、髪質についてなど気兼ねなくご相談ください。<br>
+              スタッフ一同、お待ちしております。
             </p>
           </div>
         </section>
@@ -225,14 +227,14 @@
                 <a href="#top" class="twitter-btn"><i class="fab fa-twitter fa-2x"></i></a>
               </div>
               <div class="contact-list">
-                <div class="phone">
+                <span>
                   <i class="fa-solid fa-phone"></i>
-                  <p>0000-222-0000</p>
-                </div>
-                <div class="mail">
+                  0000-222-0000
+                </span>
+                <span>
                   <i class="fa-regular fa-envelope"></i>
-                  <p>beyo_kakuu@beyo.or.jp</p>
-                </div>
+                  beyo_kakuu@beyo.or.jp
+                </span>
               </div>
               <p>Copyright 2022 | Beyo. All Rights Reserved.</p>
             </div>
