--- a/index.html
+++ b/index.html
@@ -163,21 +163,24 @@
                 <img src="https://ak-n-1.github.io/beyo/img/staff_1.jpg" alt="女性スタッフ1">
               </div>
               <h3>後藤　あかり</h3>
-              <p>スタイリスト</p>
+              <p>Stylist</p>
+              <p>歴：5年</p>
             </div>
             <div class="staff-box">
               <div class="staffimg">
                 <img src="https://ak-n-1.github.io/beyo/img/staff_2.jpg" alt="女性スタッフ2">
               </div>
               <h3>清水　聡美</h3>
-              <p>スタイリスト</p>
+              <p>Stylist</p>
+              <p>歴：10年</p>
             </div>
             <div class="staff-box">
               <div class="staffimg">
                 <img src="https://ak-n-1.github.io/beyo/img/staff_3.jpg" alt="男性スタッフ">
               </div>
               <h3>佐藤　健太</h3>
-              <p>代表/スタイリスト</p>
+              <p>代表/Stylist</p>
+              <p>歴：15年</p>
             </div>
           </div>
         </section>
@@ -199,7 +202,7 @@
             </ul>
           </div>
           <div class="news_more">
-            <p class="n_viewbox">view more</p>
+            <a href="#top"><p class="n_viewbox">view more</p></a>
           </div>
         </section>
 
