--- a/index.html
+++ b/index.html
@@ -225,6 +225,7 @@
             <img class="backimg" src="https://ak-n-1.github.io/beyo/img/背景1-3.jpg" alt="footer背景">
             <div class="footerbox">
               <img class="footerlogo" src="https://ak-n-1.github.io/beyo/img/Beyologo.svg" alt="ロゴ">
+              <span class="footerboder"></span>
               <div class="sns-list">
                 <a href="#top" class="insta-name"><i class="fab fa-instagram fa-2x"></i></a>
                 <a href="#top" class="twitter-btn"><i class="fab fa-twitter fa-2x"></i></a>
