--- a/index.html
+++ b/index.html
@@ -206,21 +206,21 @@
           </div>
         </section>
 
-        <section id="access">
-          <div class="access-box1"></div>
-          <div class="access-box2">
-            <div class="access-img">
+        <section id="info">
+          <div class="info-box1"></div>
+          <div class="info-box2">
+            <div class="info-img">
               <img src="https://ak-n-1.github.io/beyo/img/美容院店内.jpg" alt="店内">
             </div>
-            <div class="access-text">
-              <h2 id="access_title">INFO</h2>
-              <div class="access-box3">
-                <div class="access-l">
+            <div class="info-text">
+              <h2 id="info_title">INFO</h2>
+              <div class="info-box3">
+                <div class="info-l">
                   <h4>住所</h4>
                   <p>〒123-4567 東京都丸区三角町四角12-3 バツビル2階<br>
                   JR菱形駅東口より徒歩5分<br>地下鉄丸円線菱形南駅　出口A1より徒歩7分</p>
                 </div>
-                <div class="access-r">
+                <div class="info-r">
                   <h4>営業時間</h4>
                   <p>10:00-19:00</p>
                 </div>
