--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <li class="menu__item"><a href="#about">ABOUT</a></li>
                 <li class="menu__item"><a href="#h2_title">MENU</a></li>
                 <li class="menu__item"><a href="#news">NEWS</a></li>
-                <li class="menu__item"><a href="#access">ACCESS</a></li>
+                <li class="menu__item"><a href="#info">INFO</a></li>
               </ul>
             </nav>
           </div>
